[gd_scene load_steps=22 format=3 uid="uid://bfet2ccdjje2p"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_d7dnp"]
[ext_resource type="Texture2D" uid="uid://dqac8pf0beers" path="res://Assets/Thumbnails/LB_mobilspel_bg.png" id="2_0hddr"]
[ext_resource type="Texture2D" uid="uid://offbbqaxbyfv" path="res://Assets/Thumbnails/LB_YT_cover_kurragomma_2560x1440_stranden (1).png" id="3_wq343"]
[ext_resource type="Texture2D" uid="uid://coy6owndisvqn" path="res://TempImages/temp_thumbnail.png" id="4_gburu"]
[ext_resource type="Texture2D" uid="uid://cakjmwh7skhq0" path="res://Assets/Thumbnails/LB_YT_cover_kurragomma_2560x1440_stranden_hover.png" id="4_iec5h"]
[ext_resource type="Script" path="res://Scenes/ui-nav.gd" id="4_j817u"]
[ext_resource type="Texture2D" uid="uid://dvph1jj0u7phs" path="res://Assets/Thumbnails/LB_YT_cover_kurragomma_2560x1440_havetsbotten (1).png" id="6_f4dcn"]
[ext_resource type="Texture2D" uid="uid://cq5ju3dt6urm8" path="res://Assets/Thumbnails/LB_YT_cover_kurragomma_2560x1440_hemma (1).png" id="8_22mtx"]
[ext_resource type="Texture2D" uid="uid://b2w0eqxmpary2" path="res://Assets/Thumbnails/LB_YT_cover_kurragomma_2560x1440_hemma_hover.png" id="9_2ysyi"]
[ext_resource type="Texture2D" uid="uid://b3yrvwlgjskos" path="res://Assets/Thumbnails/LB_YT_cover_kurragomma_2560x1440_bergetstopp (1).png" id="10_ucahx"]
[ext_resource type="Texture2D" uid="uid://dc6v8m2wqpq06" path="res://Assets/Thumbnails/LB_YT_cover_kurragomma_2560x1440_bergetstopp_hover.png" id="11_u6vy4"]
[ext_resource type="Texture2D" uid="uid://mpm2kbx26ok6" path="res://Assets/Thumbnails/LB_YT_cover_kurragomma_2560x1440_djungeln (1).png" id="12_16ccb"]
[ext_resource type="Texture2D" uid="uid://l41ovhgjkxgm" path="res://Assets/Thumbnails/LB_YT_cover_kurragomma_2560x1440_gympasalen (1).png" id="13_l7xhq"]
[ext_resource type="Texture2D" uid="uid://b3u8bqyxq3i3y" path="res://Assets/ICONS/Flag_SE.png" id="14_inu5c"]
[ext_resource type="Texture2D" uid="uid://chbdn5spybh2x" path="res://Assets/ICONS/Flag_DK.png" id="15_h30e2"]
[ext_resource type="Texture2D" uid="uid://c7xln86dh0sca" path="res://Assets/ICONS/Flag_NO.png" id="16_lbo8h"]
[ext_resource type="Texture2D" uid="uid://b01g3lmaqqg78" path="res://Assets/ICONS/Flag_FI.png" id="17_kyvl8"]

[sub_resource type="Animation" id="Animation_6d8hl"]
resource_name = "Fade_in"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.233333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_uwtgl"]
resource_name = "Fade_out"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6gjqc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rlixt"]
_data = {
"Fade_in": SubResource("Animation_6d8hl"),
"Fade_out": SubResource("Animation_uwtgl"),
"RESET": SubResource("Animation_6gjqc")
}

[node name="ButtonManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_d7dnp")
metadata/_edit_use_anchors_ = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_0hddr")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -655.0
offset_top = -297.0
offset_right = 8225.0
offset_bottom = 4479.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.15, 0.15)
theme_override_constants/margin_top = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 200

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 400

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Hide_Seek" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer3/Hide_Seek3")
focus_neighbor_top = NodePath("../../../HBoxContainer2/VBoxContainer/Hide_Seek4")
focus_neighbor_right = NodePath("../../VBoxContainer2/Hide_Seek2")
focus_neighbor_bottom = NodePath("../../../HBoxContainer2/VBoxContainer/Hide_Seek4")
texture_normal = ExtResource("3_wq343")
texture_hover = ExtResource("4_iec5h")
texture_focused = ExtResource("4_iec5h")
script = ExtResource("4_j817u")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "Strand"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Hide_Seek2" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer/Hide_Seek")
focus_neighbor_top = NodePath("../../../HBoxContainer2/VBoxContainer2/Hide_Seek5")
focus_neighbor_right = NodePath("../../VBoxContainer3/Hide_Seek3")
focus_neighbor_bottom = NodePath("../../../HBoxContainer2/VBoxContainer2/Hide_Seek5")
texture_normal = ExtResource("6_f4dcn")
texture_focused = ExtResource("4_gburu")

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "Under Vatten"
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Hide_Seek3" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer2/Hide_Seek2")
focus_neighbor_top = NodePath("../../../HBoxContainer2/VBoxContainer3/Hide_Seek6")
focus_neighbor_right = NodePath("../../VBoxContainer/Hide_Seek")
focus_neighbor_bottom = NodePath("../../../HBoxContainer2/VBoxContainer3/Hide_Seek6")
texture_normal = ExtResource("8_22mtx")
texture_hover = ExtResource("9_2ysyi")
texture_focused = ExtResource("9_2ysyi")

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "Hemma"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 400

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Hide_Seek4" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer3/Hide_Seek6")
focus_neighbor_top = NodePath("../../../HBoxContainer/VBoxContainer/Hide_Seek")
focus_neighbor_right = NodePath("../../VBoxContainer2/Hide_Seek5")
focus_neighbor_bottom = NodePath("../../../HBoxContainer/VBoxContainer/Hide_Seek")
texture_normal = ExtResource("10_ucahx")
texture_hover = ExtResource("11_u6vy4")
texture_focused = ExtResource("11_u6vy4")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "Bestig Berg"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Hide_Seek5" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer/Hide_Seek4")
focus_neighbor_top = NodePath("../../../HBoxContainer/VBoxContainer2/Hide_Seek2")
focus_neighbor_right = NodePath("../../VBoxContainer3/Hide_Seek6")
focus_neighbor_bottom = NodePath("../../../HBoxContainer/VBoxContainer2/Hide_Seek2")
texture_normal = ExtResource("12_16ccb")
texture_focused = ExtResource("4_gburu")

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "Djungel"
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Hide_Seek6" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3"]
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer2/Hide_Seek5")
focus_neighbor_top = NodePath("../../../HBoxContainer/VBoxContainer3/Hide_Seek3")
focus_neighbor_right = NodePath("../../VBoxContainer/Hide_Seek4")
focus_neighbor_bottom = NodePath("../../../HBoxContainer/VBoxContainer3/Hide_Seek3")
texture_normal = ExtResource("13_l7xhq")
texture_focused = ExtResource("4_gburu")

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "Gym"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rlixt")
}

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
visible = false
offset_left = -932.0
offset_top = -797.0
offset_right = 2916.0
offset_bottom = 2312.0
color = Color(0, 0, 0, 1)

[node name="TempThumbnail" type="Sprite2D" parent="."]
position = Vector2(966, 192)
scale = Vector2(0.428125, 0.131019)
texture = ExtResource("4_gburu")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 679.0
offset_top = 905.0
offset_right = -945.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="Swedish" type="TextureButton" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("14_inu5c")

[node name="Danish" type="TextureButton" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("15_h30e2")

[node name="Norwegian" type="TextureButton" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("16_lbo8h")

[node name="Finnish" type="TextureButton" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("17_kyvl8")

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Hide_Seek" to="." method="_on_hide_seek_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Hide_Seek" to="." method="_on_hide_seek_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Hide_Seek" to="." method="_on_hide_seek_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Hide_Seek2" to="." method="_on_hide_seek_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Hide_Seek2" to="." method="_on_hide_seek_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Hide_Seek2" to="." method="_on_hide_seek_2_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Hide_Seek3" to="." method="_on_hide_seek_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Hide_Seek3" to="." method="_on_hide_seek_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Hide_Seek3" to="." method="_on_hide_seek_3_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Hide_Seek4" to="." method="_on_hide_seek_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Hide_Seek4" to="." method="_on_hide_seek_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Hide_Seek4" to="." method="_on_hide_seek_4_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/Hide_Seek5" to="." method="_on_hide_seek_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/Hide_Seek5" to="." method="_on_hide_seek_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/Hide_Seek5" to="." method="_on_hide_seek_5_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3/Hide_Seek6" to="." method="_on_hide_seek_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3/Hide_Seek6" to="." method="_on_hide_seek_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3/Hide_Seek6" to="." method="_on_hide_seek_6_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/Swedish" to="." method="Swedish"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/Danish" to="." method="Danish"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/Norwegian" to="." method="Norwegian"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/Finnish" to="." method="Finnish"]
